// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scaffold permutations > 'js'-'react-router'-'heroui' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "eslint.config.js",
  "index.html",
  "jsconfig.json",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.jsx",
  "src/components/common/Container.jsx",
  "src/components/common/Heading.jsx",
  "src/components/common/Image.jsx",
  "src/components/common/Link.jsx",
  "src/components/common/NotFound.jsx",
  "src/components/common/Text.jsx",
  "src/components/common/ThemeToggle.jsx",
  "src/components/layouts/RootLayout.jsx",
  "src/config/env.jsx",
  "src/constants/index.jsx",
  "src/features/admin-dashboard/api/getUsers.js",
  "src/features/admin-dashboard/components/UsersTable.jsx",
  "src/features/admin-dashboard/data/users.js",
  "src/features/admin-dashboard/hooks/useUsersQuery.js",
  "src/features/admin-dashboard/index.js",
  "src/features/admin-dashboard/layouts/AdminLayout.jsx",
  "src/features/admin-dashboard/pages/Admin.jsx",
  "src/features/admin-dashboard/types/user.type.js",
  "src/features/auth/api/auth.api.js",
  "src/features/auth/hooks/useForgotPasswordMutation.js",
  "src/features/auth/hooks/useLoginMutation.js",
  "src/features/auth/hooks/useSignupMutation.js",
  "src/features/auth/index.js",
  "src/features/auth/layouts/AuthLayout.jsx",
  "src/features/auth/pages/ForgotPassword.jsx",
  "src/features/auth/pages/Login.jsx",
  "src/features/auth/pages/Signup.jsx",
  "src/features/auth/schemas/forgotPassword.schema.js",
  "src/features/auth/schemas/login.schema.js",
  "src/features/auth/schemas/signup.schema.js",
  "src/features/auth/services/auth.service.js",
  "src/features/auth/types/auth.type.js",
  "src/features/home/components/FeatureSection.jsx",
  "src/features/home/components/Footer.jsx",
  "src/features/home/components/Hero.jsx",
  "src/features/home/data/features.js",
  "src/features/home/index.js",
  "src/features/home/pages/Home.jsx",
  "src/features/user-dashboard/components/Sidebar.jsx",
  "src/features/user-dashboard/data/stats.js",
  "src/features/user-dashboard/index.js",
  "src/features/user-dashboard/layouts/DashboardLayout.jsx",
  "src/features/user-dashboard/pages/Dashboard.jsx",
  "src/hooks/useMobile.jsx",
  "src/hooks/useTheme.jsx",
  "src/index.css",
  "src/lib/axios.jsx",
  "src/lib/utils.jsx",
  "src/main.jsx",
  "src/middlewares/authMiddleware.jsx",
  "src/middlewares/guestMiddleware.jsx",
  "src/models/user.model.jsx",
  "src/providers/theme-provider.jsx",
  "src/routes/.gitkeep",
  "src/routes/index.jsx",
  "src/routes/routes.generated.jsx",
  "src/store/useAuthStore.jsx",
  "src/test/setup.js",
  "src/types/api.type.jsx",
  "src/types/models/.gitkeep",
  "vite.config.js",
  "vitest.config.js",
]
`;

exports[`scaffold permutations > 'js'-'react-router'-'heroui' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from 'react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'js'-'react-router'-'heroui' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.js'],
    globals: true,
  },
});
"
`;

exports[`scaffold permutations > 'js'-'react-router'-'shadcn' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "components.json",
  "eslint.config.js",
  "index.html",
  "jsconfig.json",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.jsx",
  "src/components/common/Container.jsx",
  "src/components/common/Heading.jsx",
  "src/components/common/Image.jsx",
  "src/components/common/Link.jsx",
  "src/components/common/NotFound.jsx",
  "src/components/common/Text.jsx",
  "src/components/common/ThemeToggle.jsx",
  "src/components/layouts/RootLayout.jsx",
  "src/components/ui/badge.jsx",
  "src/components/ui/button.jsx",
  "src/components/ui/card.jsx",
  "src/components/ui/input.jsx",
  "src/components/ui/label.jsx",
  "src/components/ui/separator.jsx",
  "src/config/env.jsx",
  "src/constants/index.jsx",
  "src/features/admin-dashboard/api/getUsers.js",
  "src/features/admin-dashboard/components/UsersTable.jsx",
  "src/features/admin-dashboard/data/users.js",
  "src/features/admin-dashboard/hooks/useUsersQuery.js",
  "src/features/admin-dashboard/index.js",
  "src/features/admin-dashboard/layouts/AdminLayout.jsx",
  "src/features/admin-dashboard/pages/Admin.jsx",
  "src/features/admin-dashboard/types/user.type.js",
  "src/features/auth/api/auth.api.js",
  "src/features/auth/hooks/useForgotPasswordMutation.js",
  "src/features/auth/hooks/useLoginMutation.js",
  "src/features/auth/hooks/useSignupMutation.js",
  "src/features/auth/index.js",
  "src/features/auth/layouts/AuthLayout.jsx",
  "src/features/auth/pages/ForgotPassword.jsx",
  "src/features/auth/pages/Login.jsx",
  "src/features/auth/pages/Signup.jsx",
  "src/features/auth/schemas/forgotPassword.schema.js",
  "src/features/auth/schemas/login.schema.js",
  "src/features/auth/schemas/signup.schema.js",
  "src/features/auth/services/auth.service.js",
  "src/features/auth/types/auth.type.js",
  "src/features/home/components/FeatureSection.jsx",
  "src/features/home/components/Footer.jsx",
  "src/features/home/components/Hero.jsx",
  "src/features/home/data/features.js",
  "src/features/home/index.js",
  "src/features/home/pages/Home.jsx",
  "src/features/user-dashboard/components/Sidebar.jsx",
  "src/features/user-dashboard/data/stats.js",
  "src/features/user-dashboard/index.js",
  "src/features/user-dashboard/layouts/DashboardLayout.jsx",
  "src/features/user-dashboard/pages/Dashboard.jsx",
  "src/hooks/useMobile.jsx",
  "src/hooks/useTheme.jsx",
  "src/index.css",
  "src/lib/axios.jsx",
  "src/lib/utils.jsx",
  "src/main.jsx",
  "src/middlewares/authMiddleware.jsx",
  "src/middlewares/guestMiddleware.jsx",
  "src/models/user.model.jsx",
  "src/providers/theme-provider.jsx",
  "src/routes/.gitkeep",
  "src/routes/index.jsx",
  "src/routes/routes.generated.jsx",
  "src/store/useAuthStore.jsx",
  "src/test/setup.js",
  "src/types/api.type.jsx",
  "src/types/models/.gitkeep",
  "vite.config.js",
  "vitest.config.js",
]
`;

exports[`scaffold permutations > 'js'-'react-router'-'shadcn' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from 'react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'js'-'react-router'-'shadcn' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.js'],
    globals: true,
  },
});
"
`;

exports[`scaffold permutations > 'js'-'tanstack-router'-'heroui' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "eslint.config.js",
  "index.html",
  "jsconfig.json",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.jsx",
  "src/components/common/Container.jsx",
  "src/components/common/Heading.jsx",
  "src/components/common/Image.jsx",
  "src/components/common/Link.jsx",
  "src/components/common/NotFound.jsx",
  "src/components/common/Text.jsx",
  "src/components/common/ThemeToggle.jsx",
  "src/components/layouts/RootLayout.jsx",
  "src/config/env.jsx",
  "src/constants/index.jsx",
  "src/features/admin-dashboard/api/getUsers.js",
  "src/features/admin-dashboard/components/UsersTable.jsx",
  "src/features/admin-dashboard/data/users.js",
  "src/features/admin-dashboard/hooks/useUsersQuery.js",
  "src/features/admin-dashboard/index.js",
  "src/features/admin-dashboard/layouts/AdminLayout.jsx",
  "src/features/admin-dashboard/pages/Admin.jsx",
  "src/features/admin-dashboard/types/user.type.js",
  "src/features/auth/api/auth.api.js",
  "src/features/auth/hooks/useForgotPasswordMutation.js",
  "src/features/auth/hooks/useLoginMutation.js",
  "src/features/auth/hooks/useSignupMutation.js",
  "src/features/auth/index.js",
  "src/features/auth/layouts/AuthLayout.jsx",
  "src/features/auth/pages/ForgotPassword.jsx",
  "src/features/auth/pages/Login.jsx",
  "src/features/auth/pages/Signup.jsx",
  "src/features/auth/schemas/forgotPassword.schema.js",
  "src/features/auth/schemas/login.schema.js",
  "src/features/auth/schemas/signup.schema.js",
  "src/features/auth/services/auth.service.js",
  "src/features/auth/types/auth.type.js",
  "src/features/home/components/FeatureSection.jsx",
  "src/features/home/components/Footer.jsx",
  "src/features/home/components/Hero.jsx",
  "src/features/home/data/features.js",
  "src/features/home/index.js",
  "src/features/home/pages/Home.jsx",
  "src/features/user-dashboard/components/Sidebar.jsx",
  "src/features/user-dashboard/data/stats.js",
  "src/features/user-dashboard/index.js",
  "src/features/user-dashboard/layouts/DashboardLayout.jsx",
  "src/features/user-dashboard/pages/Dashboard.jsx",
  "src/hooks/useMobile.jsx",
  "src/hooks/useTheme.jsx",
  "src/index.css",
  "src/lib/axios.jsx",
  "src/lib/utils.jsx",
  "src/main.jsx",
  "src/middlewares/authMiddleware.jsx",
  "src/middlewares/guestMiddleware.jsx",
  "src/models/user.model.jsx",
  "src/providers/theme-provider.jsx",
  "src/routes/.gitkeep",
  "src/routes/index.jsx",
  "src/routes/routes.generated.jsx",
  "src/store/useAuthStore.jsx",
  "src/test/setup.js",
  "src/types/api.type.jsx",
  "src/types/models/.gitkeep",
  "vite.config.js",
  "vitest.config.js",
]
`;

exports[`scaffold permutations > 'js'-'tanstack-router'-'heroui' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from '@tanstack/react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'js'-'tanstack-router'-'heroui' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.js'],
    globals: true,
  },
});
"
`;

exports[`scaffold permutations > 'js'-'tanstack-router'-'shadcn' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "components.json",
  "eslint.config.js",
  "index.html",
  "jsconfig.json",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.jsx",
  "src/components/common/Container.jsx",
  "src/components/common/Heading.jsx",
  "src/components/common/Image.jsx",
  "src/components/common/Link.jsx",
  "src/components/common/NotFound.jsx",
  "src/components/common/Text.jsx",
  "src/components/common/ThemeToggle.jsx",
  "src/components/layouts/RootLayout.jsx",
  "src/components/ui/badge.jsx",
  "src/components/ui/button.jsx",
  "src/components/ui/card.jsx",
  "src/components/ui/input.jsx",
  "src/components/ui/label.jsx",
  "src/components/ui/separator.jsx",
  "src/config/env.jsx",
  "src/constants/index.jsx",
  "src/features/admin-dashboard/api/getUsers.js",
  "src/features/admin-dashboard/components/UsersTable.jsx",
  "src/features/admin-dashboard/data/users.js",
  "src/features/admin-dashboard/hooks/useUsersQuery.js",
  "src/features/admin-dashboard/index.js",
  "src/features/admin-dashboard/layouts/AdminLayout.jsx",
  "src/features/admin-dashboard/pages/Admin.jsx",
  "src/features/admin-dashboard/types/user.type.js",
  "src/features/auth/api/auth.api.js",
  "src/features/auth/hooks/useForgotPasswordMutation.js",
  "src/features/auth/hooks/useLoginMutation.js",
  "src/features/auth/hooks/useSignupMutation.js",
  "src/features/auth/index.js",
  "src/features/auth/layouts/AuthLayout.jsx",
  "src/features/auth/pages/ForgotPassword.jsx",
  "src/features/auth/pages/Login.jsx",
  "src/features/auth/pages/Signup.jsx",
  "src/features/auth/schemas/forgotPassword.schema.js",
  "src/features/auth/schemas/login.schema.js",
  "src/features/auth/schemas/signup.schema.js",
  "src/features/auth/services/auth.service.js",
  "src/features/auth/types/auth.type.js",
  "src/features/home/components/FeatureSection.jsx",
  "src/features/home/components/Footer.jsx",
  "src/features/home/components/Hero.jsx",
  "src/features/home/data/features.js",
  "src/features/home/index.js",
  "src/features/home/pages/Home.jsx",
  "src/features/user-dashboard/components/Sidebar.jsx",
  "src/features/user-dashboard/data/stats.js",
  "src/features/user-dashboard/index.js",
  "src/features/user-dashboard/layouts/DashboardLayout.jsx",
  "src/features/user-dashboard/pages/Dashboard.jsx",
  "src/hooks/useMobile.jsx",
  "src/hooks/useTheme.jsx",
  "src/index.css",
  "src/lib/axios.jsx",
  "src/lib/utils.jsx",
  "src/main.jsx",
  "src/middlewares/authMiddleware.jsx",
  "src/middlewares/guestMiddleware.jsx",
  "src/models/user.model.jsx",
  "src/providers/theme-provider.jsx",
  "src/routes/.gitkeep",
  "src/routes/index.jsx",
  "src/routes/routes.generated.jsx",
  "src/store/useAuthStore.jsx",
  "src/test/setup.js",
  "src/types/api.type.jsx",
  "src/types/models/.gitkeep",
  "vite.config.js",
  "vitest.config.js",
]
`;

exports[`scaffold permutations > 'js'-'tanstack-router'-'shadcn' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from '@tanstack/react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'js'-'tanstack-router'-'shadcn' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.js'],
    globals: true,
  },
});
"
`;

exports[`scaffold permutations > 'ts'-'react-router'-'heroui' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "eslint.config.ts",
  "index.html",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.tsx",
  "src/components/common/Container.tsx",
  "src/components/common/Heading.tsx",
  "src/components/common/Image.tsx",
  "src/components/common/Link.tsx",
  "src/components/common/NotFound.tsx",
  "src/components/common/Text.tsx",
  "src/components/common/ThemeToggle.tsx",
  "src/components/layouts/RootLayout.tsx",
  "src/config/env.tsx",
  "src/constants/index.tsx",
  "src/features/admin-dashboard/api/getUsers.ts",
  "src/features/admin-dashboard/components/UsersTable.tsx",
  "src/features/admin-dashboard/data/users.ts",
  "src/features/admin-dashboard/hooks/useUsersQuery.ts",
  "src/features/admin-dashboard/index.ts",
  "src/features/admin-dashboard/layouts/AdminLayout.tsx",
  "src/features/admin-dashboard/pages/Admin.tsx",
  "src/features/admin-dashboard/types/user.type.ts",
  "src/features/auth/api/auth.api.ts",
  "src/features/auth/hooks/useForgotPasswordMutation.ts",
  "src/features/auth/hooks/useLoginMutation.ts",
  "src/features/auth/hooks/useSignupMutation.ts",
  "src/features/auth/index.ts",
  "src/features/auth/layouts/AuthLayout.tsx",
  "src/features/auth/pages/ForgotPassword.tsx",
  "src/features/auth/pages/Login.tsx",
  "src/features/auth/pages/Signup.tsx",
  "src/features/auth/schemas/forgotPassword.schema.ts",
  "src/features/auth/schemas/login.schema.ts",
  "src/features/auth/schemas/signup.schema.ts",
  "src/features/auth/services/auth.service.ts",
  "src/features/auth/types/auth.type.ts",
  "src/features/home/components/FeatureSection.tsx",
  "src/features/home/components/Footer.tsx",
  "src/features/home/components/Hero.tsx",
  "src/features/home/data/features.ts",
  "src/features/home/index.ts",
  "src/features/home/pages/Home.tsx",
  "src/features/user-dashboard/components/Sidebar.tsx",
  "src/features/user-dashboard/data/stats.ts",
  "src/features/user-dashboard/index.ts",
  "src/features/user-dashboard/layouts/DashboardLayout.tsx",
  "src/features/user-dashboard/pages/Dashboard.tsx",
  "src/hooks/useMobile.tsx",
  "src/hooks/useTheme.tsx",
  "src/index.css",
  "src/lib/axios.tsx",
  "src/lib/utils.tsx",
  "src/main.tsx",
  "src/middlewares/authMiddleware.tsx",
  "src/middlewares/guestMiddleware.tsx",
  "src/models/user.model.tsx",
  "src/providers/theme-provider.tsx",
  "src/routes/.gitkeep",
  "src/routes/index.tsx",
  "src/routes/routes.generated.tsx",
  "src/store/useAuthStore.tsx",
  "src/test/setup.ts",
  "src/types/api.type.tsx",
  "src/types/models/.gitkeep",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
  "vitest.config.ts",
]
`;

exports[`scaffold permutations > 'ts'-'react-router'-'heroui' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from 'react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')!).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'ts'-'react-router'-'heroui' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.ts'],
    globals: true,
  },
});
"
`;

exports[`scaffold permutations > 'ts'-'react-router'-'shadcn' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "components.json",
  "eslint.config.ts",
  "index.html",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.tsx",
  "src/components/common/Container.tsx",
  "src/components/common/Heading.tsx",
  "src/components/common/Image.tsx",
  "src/components/common/Link.tsx",
  "src/components/common/NotFound.tsx",
  "src/components/common/Text.tsx",
  "src/components/common/ThemeToggle.tsx",
  "src/components/layouts/RootLayout.tsx",
  "src/components/ui/badge.tsx",
  "src/components/ui/button.tsx",
  "src/components/ui/card.tsx",
  "src/components/ui/input.tsx",
  "src/components/ui/label.tsx",
  "src/components/ui/separator.tsx",
  "src/config/env.tsx",
  "src/constants/index.tsx",
  "src/features/admin-dashboard/api/getUsers.ts",
  "src/features/admin-dashboard/components/UsersTable.tsx",
  "src/features/admin-dashboard/data/users.ts",
  "src/features/admin-dashboard/hooks/useUsersQuery.ts",
  "src/features/admin-dashboard/index.ts",
  "src/features/admin-dashboard/layouts/AdminLayout.tsx",
  "src/features/admin-dashboard/pages/Admin.tsx",
  "src/features/admin-dashboard/types/user.type.ts",
  "src/features/auth/api/auth.api.ts",
  "src/features/auth/hooks/useForgotPasswordMutation.ts",
  "src/features/auth/hooks/useLoginMutation.ts",
  "src/features/auth/hooks/useSignupMutation.ts",
  "src/features/auth/index.ts",
  "src/features/auth/layouts/AuthLayout.tsx",
  "src/features/auth/pages/ForgotPassword.tsx",
  "src/features/auth/pages/Login.tsx",
  "src/features/auth/pages/Signup.tsx",
  "src/features/auth/schemas/forgotPassword.schema.ts",
  "src/features/auth/schemas/login.schema.ts",
  "src/features/auth/schemas/signup.schema.ts",
  "src/features/auth/services/auth.service.ts",
  "src/features/auth/types/auth.type.ts",
  "src/features/home/components/FeatureSection.tsx",
  "src/features/home/components/Footer.tsx",
  "src/features/home/components/Hero.tsx",
  "src/features/home/data/features.ts",
  "src/features/home/index.ts",
  "src/features/home/pages/Home.tsx",
  "src/features/user-dashboard/components/Sidebar.tsx",
  "src/features/user-dashboard/data/stats.ts",
  "src/features/user-dashboard/index.ts",
  "src/features/user-dashboard/layouts/DashboardLayout.tsx",
  "src/features/user-dashboard/pages/Dashboard.tsx",
  "src/hooks/useMobile.tsx",
  "src/hooks/useTheme.tsx",
  "src/index.css",
  "src/lib/axios.tsx",
  "src/lib/utils.tsx",
  "src/main.tsx",
  "src/middlewares/authMiddleware.tsx",
  "src/middlewares/guestMiddleware.tsx",
  "src/models/user.model.tsx",
  "src/providers/theme-provider.tsx",
  "src/routes/.gitkeep",
  "src/routes/index.tsx",
  "src/routes/routes.generated.tsx",
  "src/store/useAuthStore.tsx",
  "src/test/setup.ts",
  "src/types/api.type.tsx",
  "src/types/models/.gitkeep",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
  "vitest.config.ts",
]
`;

exports[`scaffold permutations > 'ts'-'react-router'-'shadcn' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from 'react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')!).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'ts'-'react-router'-'shadcn' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.ts'],
    globals: true,
  },
});
"
`;

exports[`scaffold permutations > 'ts'-'tanstack-router'-'heroui' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "eslint.config.ts",
  "index.html",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.tsx",
  "src/components/common/Container.tsx",
  "src/components/common/Heading.tsx",
  "src/components/common/Image.tsx",
  "src/components/common/Link.tsx",
  "src/components/common/NotFound.tsx",
  "src/components/common/Text.tsx",
  "src/components/common/ThemeToggle.tsx",
  "src/components/layouts/RootLayout.tsx",
  "src/config/env.tsx",
  "src/constants/index.tsx",
  "src/features/admin-dashboard/api/getUsers.ts",
  "src/features/admin-dashboard/components/UsersTable.tsx",
  "src/features/admin-dashboard/data/users.ts",
  "src/features/admin-dashboard/hooks/useUsersQuery.ts",
  "src/features/admin-dashboard/index.ts",
  "src/features/admin-dashboard/layouts/AdminLayout.tsx",
  "src/features/admin-dashboard/pages/Admin.tsx",
  "src/features/admin-dashboard/types/user.type.ts",
  "src/features/auth/api/auth.api.ts",
  "src/features/auth/hooks/useForgotPasswordMutation.ts",
  "src/features/auth/hooks/useLoginMutation.ts",
  "src/features/auth/hooks/useSignupMutation.ts",
  "src/features/auth/index.ts",
  "src/features/auth/layouts/AuthLayout.tsx",
  "src/features/auth/pages/ForgotPassword.tsx",
  "src/features/auth/pages/Login.tsx",
  "src/features/auth/pages/Signup.tsx",
  "src/features/auth/schemas/forgotPassword.schema.ts",
  "src/features/auth/schemas/login.schema.ts",
  "src/features/auth/schemas/signup.schema.ts",
  "src/features/auth/services/auth.service.ts",
  "src/features/auth/types/auth.type.ts",
  "src/features/home/components/FeatureSection.tsx",
  "src/features/home/components/Footer.tsx",
  "src/features/home/components/Hero.tsx",
  "src/features/home/data/features.ts",
  "src/features/home/index.ts",
  "src/features/home/pages/Home.tsx",
  "src/features/user-dashboard/components/Sidebar.tsx",
  "src/features/user-dashboard/data/stats.ts",
  "src/features/user-dashboard/index.ts",
  "src/features/user-dashboard/layouts/DashboardLayout.tsx",
  "src/features/user-dashboard/pages/Dashboard.tsx",
  "src/hooks/useMobile.tsx",
  "src/hooks/useTheme.tsx",
  "src/index.css",
  "src/lib/axios.tsx",
  "src/lib/utils.tsx",
  "src/main.tsx",
  "src/middlewares/authMiddleware.tsx",
  "src/middlewares/guestMiddleware.tsx",
  "src/models/user.model.tsx",
  "src/providers/theme-provider.tsx",
  "src/routes/.gitkeep",
  "src/routes/index.tsx",
  "src/routes/routes.generated.tsx",
  "src/store/useAuthStore.tsx",
  "src/test/setup.ts",
  "src/types/api.type.tsx",
  "src/types/models/.gitkeep",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
  "vitest.config.ts",
]
`;

exports[`scaffold permutations > 'ts'-'tanstack-router'-'heroui' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from '@tanstack/react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')!).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'ts'-'tanstack-router'-'heroui' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.ts'],
    globals: true,
  },
});
"
`;

exports[`scaffold permutations > 'ts'-'tanstack-router'-'shadcn' > file-tree 1`] = `
[
  ".github/workflows/ci.yml",
  ".gitignore",
  "components.json",
  "eslint.config.ts",
  "index.html",
  "package.json",
  "prettier.config.js",
  "src/assets/.gitkeep",
  "src/components/common/Box.tsx",
  "src/components/common/Container.tsx",
  "src/components/common/Heading.tsx",
  "src/components/common/Image.tsx",
  "src/components/common/Link.tsx",
  "src/components/common/NotFound.tsx",
  "src/components/common/Text.tsx",
  "src/components/common/ThemeToggle.tsx",
  "src/components/layouts/RootLayout.tsx",
  "src/components/ui/badge.tsx",
  "src/components/ui/button.tsx",
  "src/components/ui/card.tsx",
  "src/components/ui/input.tsx",
  "src/components/ui/label.tsx",
  "src/components/ui/separator.tsx",
  "src/config/env.tsx",
  "src/constants/index.tsx",
  "src/features/admin-dashboard/api/getUsers.ts",
  "src/features/admin-dashboard/components/UsersTable.tsx",
  "src/features/admin-dashboard/data/users.ts",
  "src/features/admin-dashboard/hooks/useUsersQuery.ts",
  "src/features/admin-dashboard/index.ts",
  "src/features/admin-dashboard/layouts/AdminLayout.tsx",
  "src/features/admin-dashboard/pages/Admin.tsx",
  "src/features/admin-dashboard/types/user.type.ts",
  "src/features/auth/api/auth.api.ts",
  "src/features/auth/hooks/useForgotPasswordMutation.ts",
  "src/features/auth/hooks/useLoginMutation.ts",
  "src/features/auth/hooks/useSignupMutation.ts",
  "src/features/auth/index.ts",
  "src/features/auth/layouts/AuthLayout.tsx",
  "src/features/auth/pages/ForgotPassword.tsx",
  "src/features/auth/pages/Login.tsx",
  "src/features/auth/pages/Signup.tsx",
  "src/features/auth/schemas/forgotPassword.schema.ts",
  "src/features/auth/schemas/login.schema.ts",
  "src/features/auth/schemas/signup.schema.ts",
  "src/features/auth/services/auth.service.ts",
  "src/features/auth/types/auth.type.ts",
  "src/features/home/components/FeatureSection.tsx",
  "src/features/home/components/Footer.tsx",
  "src/features/home/components/Hero.tsx",
  "src/features/home/data/features.ts",
  "src/features/home/index.ts",
  "src/features/home/pages/Home.tsx",
  "src/features/user-dashboard/components/Sidebar.tsx",
  "src/features/user-dashboard/data/stats.ts",
  "src/features/user-dashboard/index.ts",
  "src/features/user-dashboard/layouts/DashboardLayout.tsx",
  "src/features/user-dashboard/pages/Dashboard.tsx",
  "src/hooks/useMobile.tsx",
  "src/hooks/useTheme.tsx",
  "src/index.css",
  "src/lib/axios.tsx",
  "src/lib/utils.tsx",
  "src/main.tsx",
  "src/middlewares/authMiddleware.tsx",
  "src/middlewares/guestMiddleware.tsx",
  "src/models/user.model.tsx",
  "src/providers/theme-provider.tsx",
  "src/routes/.gitkeep",
  "src/routes/index.tsx",
  "src/routes/routes.generated.tsx",
  "src/store/useAuthStore.tsx",
  "src/test/setup.ts",
  "src/types/api.type.tsx",
  "src/types/models/.gitkeep",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "vite.config.ts",
  "vitest.config.ts",
]
`;

exports[`scaffold permutations > 'ts'-'tanstack-router'-'shadcn' > main 1`] = `
"import { StrictMode } from 'react';
import { createRoot } from 'react-dom/client';
import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
import '@/index.css';

import { RouterProvider } from '@tanstack/react-router';

import { router } from '@/routes';
import { ThemeProvider } from '@/providers/theme-provider';

const queryClient = new QueryClient();

createRoot(document.getElementById('root')!).render(
  <StrictMode>
    <QueryClientProvider client={queryClient}>
      <ThemeProvider>
        <RouterProvider router={router} />
      </ThemeProvider>
    </QueryClientProvider>
  </StrictMode>,
);
"
`;

exports[`scaffold permutations > 'ts'-'tanstack-router'-'shadcn' > vite-config 1`] = `
"import { defineConfig } from 'vite';
import react from '@vitejs/plugin-react';
import tailwindcss from '@tailwindcss/vite';
import path from 'node:path';
import { fileURLToPath } from 'node:url';

const __dirname = fileURLToPath(new URL('.', import.meta.url));

export default defineConfig({
  plugins: [react(), tailwindcss()],
  resolve: {
    alias: {
      '@': path.resolve(__dirname, './src'),
      '@/assets': path.resolve(__dirname, './src/assets'),
      '@/components': path.resolve(__dirname, './src/components'),
      '@/config': path.resolve(__dirname, './src/config'),
      '@/constants': path.resolve(__dirname, './src/constants'),
      '@/features': path.resolve(__dirname, './src/features'),
      '@/hooks': path.resolve(__dirname, './src/hooks'),
      '@/lib': path.resolve(__dirname, './src/lib'),
      '@/middlewares': path.resolve(__dirname, './src/middlewares'),
      '@/models': path.resolve(__dirname, './src/models'),
      '@/providers': path.resolve(__dirname, './src/providers'),
      '@/routes': path.resolve(__dirname, './src/routes'),
      '@/store': path.resolve(__dirname, './src/store'),
      '@/types': path.resolve(__dirname, './src/types'),
    },
  },
  test: {
    environment: 'jsdom',
    setupFiles: ['./src/test/setup.ts'],
    globals: true,
  },
});
"
`;
